--- a/public/main.css
+++ b/public/main.css
@@ -1,187 +1,219 @@
 body {
-    font-family: "Helvetica Neue";
-    background: #f9f9fb;
+  font-family: "Helvetica Neue";
+  background: #f9f9fb;
+  margin: 0;
 }
 
 .wrapper {
-    position: relative;
-    display: flex;
-    flex-flow: row wrap;
-    margin: 0 auto;
-    max-width: 1024px;
+  position: relative;
+  display: flex;
+  flex-flow: row wrap;
+  margin: 0 auto;
+  max-width: 1024px;
 }
 
 .wrapper > * {
-    flex: 1 100%;
+  flex: 1 100%;
 }
 
 .header {
-    display: flex;
-    height: 33px;
+  display: flex;
+  height: 33px;
 }
 
 .header-left {
-    background: url("images/di_to-do-p1.svg") no-repeat center;
-    width: 8%;
-    min-width: 105px;
+  background: url("images/di_to-do-p1.svg") no-repeat center;
+  width: 8%;
+  min-width: 105px;
 }
 
 .header-center {
-    background-color: #000;
-    width: 88%;
-    height: 5px;
-    margin: auto 0;
+  background-color: #000;
+  width: 88%;
+  height: 5px;
+  margin: auto 0;
 }
 
 .header-right {
-    background: url("images/di_to-do-p3.svg") no-repeat center;
-    width: 4%;
-    min-width: 50px;
+  background: url("images/di_to-do-p3.svg") no-repeat center;
+  width: 4%;
+  min-width: 50px;
 }
 
 .main {
-    display: flex;
-    flex-flow: row wrap;
-    margin: 50px 0;
+  display: flex;
+  flex-flow: row wrap;
+  margin: 50px 0;
 }
 
 .todo-block {
-    background-color: #fff;
-    border-radius: 6px;
-    margin: 20px 20px 0 0;
-    min-height: 200px;
-    max-width: 480px;
+  background-color: #fff;
+  border-radius: 6px;
+  margin: 20px 20px 0 0;
+  min-height: 200px;
+  max-width: 480px;
 }
 
 .todo-header, .todo-content {
-    margin: 25px;
+  margin: 25px;
 }
 
 .todo-header-bar, .todo-header-content {
-    width: 100%;
+  width: 100%;
 }
 
 .todo-header-bar {
-    height: 20px;
+  height: 20px;
 }
 
 .todo-header-bar .remove-list-btn {
-    float: right;
-    border: none;
-    background: url(images/delete.svg) no-repeat center;
-    width: 14px;
-    height: 18px;
+  float: right;
+  border: none;
+  background: url(images/delete.svg) no-repeat center;
+  width: 14px;
+  height: 18px;
 }
 
 .todo-header-content input {
-    color: rgba(0, 0, 0, 0.9);
-    font-size: 24px;
-    font-weight: bold;
-    line-height: 29px;
-    width: 100%;
-    border: none;
-    border-bottom: 2px solid #fff;
+  color: rgba(0, 0, 0, 0.9);
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 29px;
+  width: 100%;
+  border: none;
+  border-bottom: 2px solid #fff;
 }
 
 .todo-header-content input:focus, .add-item-btn:focus {
-    outline: none;
-    border-bottom: 2px solid #7F7F7F;
+  outline: none;
+  border-bottom: 2px solid #7F7F7F;
 }
 
 .todo-list {
-    list-style-type: none;
-    margin: 0;
-    padding-left: 25px;
+  list-style-type: none;
+  margin: 0;
+  padding-left: 25px;
 }
 
 .checkbox-container {
-    display: block;
-    position: relative;
-    padding-left: 30px;
-    margin-bottom: 5px;
-    cursor: pointer;
-    user-select: none;
+  display: block;
+  position: relative;
+  padding-left: 30px;
+  margin-bottom: 5px;
+  cursor: pointer;
+  user-select: none;
 }
 
 .label {
-    color: rgba(0, 0, 0, 0.5);
-    line-height: 29px;
-    font-size: 20px;
-    text-decoration: none;
+  color: rgba(0, 0, 0, 0.5);
+  line-height: 29px;
+  font-size: 20px;
+  text-decoration: none;
 }
 
 .add-item-btn {
-    border: none;
-    background: none;
-    width: 95%;
-    margin-bottom: 10px;
-    border-bottom: 2px solid #fff;
+  border: none;
+  background: none;
+  width: 95%;
+  margin-bottom: 10px;
+  border-bottom: 2px solid #fff;
 }
 
 .add-item-btn:focus {
-    outline: none;
+  outline: none;
 }
 
 .checkbox-container input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
 }
 
 .check-mark {
-    position: absolute;
-    top: 2px;
-    left: 0;
-    height: 20px;
-    width: 20px;
-    border-radius: 6px;
-    border: 2px solid #7F7F7F;
+  position: absolute;
+  top: 2px;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  border-radius: 6px;
+  border: 2px solid #7F7F7F;
 }
 
 .checkbox-container:hover input ~ .check-mark {
-    background-color: #ccc;
+  background-color: #ccc;
 }
 
 .checkbox-container input:checked ~ .check-mark {
-    background-color: #7F7F7F;
+  background-color: #7F7F7F;
 }
 
 .checkbox-container input:checked ~ .label {
-    text-decoration:line-through;
+  text-decoration: line-through;
 }
 
 .check-mark:after {
-    content: "";
-    position: absolute;
-    display: none;
+  content: "";
+  position: absolute;
+  display: none;
 }
 
 .checkbox-container input:checked ~ .check-mark:after {
-    display: block;
+  display: block;
 }
 
 .checkbox-container .check-mark:after {
-    left: 5px;
-    top: 5px;
-    width: 11px;
-    height: 10px;
-    background: url("images/Path 2.svg") no-repeat center;
+  left: 5px;
+  top: 5px;
+  width: 11px;
+  height: 10px;
+  background: url("images/Path 2.svg") no-repeat center;
 }
 
 .add-btn-container {
-    padding-right: 60px;
+  padding-right: 60px;
 }
 
 .add-list-btn {
-    background: url("images/Add.svg") no-repeat center;
-    border: none;
-    width: 60px;
-    height: 60px;
-    position:fixed;
-    bottom:0;
-    z-index: 100;
+  background: url("images/Add.svg") no-repeat center;
+  border: none;
+  width: 60px;
+  height: 60px;
+  position: fixed;
+  bottom: 0;
+  z-index: 1;
 }
 
 .add-list-btn:focus {
-    outline: none;
+  outline: none;
+}
+
+#sidebar {
+  height: 100%;
+  width: 350px;
+  background-color: #fff;
+  position: fixed !important;
+  z-index: 2;
+  overflow: auto;
+  transition: 0.5s;
+  right: -350px;
+}
+
+.close-sidebar {
+  float: right;
+  border: none;
+  background: url(images/close.svg) no-repeat center;
+  width: 14px;
+  height: 18px;
+}
+
+.add-btn {
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  width: 100%;
+  font-size: 20px;
+  line-height: 46px;
+  border: none;
+  position: absolute;
+  bottom: 0;
 }
